[gd_scene load_steps=6 format=3 uid="uid://vrkoo1kjw32j"]

[ext_resource type="Script" path="res://src/scenes/course_spawner/course_spawner.gd" id="1_r4bbu"]
[ext_resource type="PackedScene" uid="uid://ccpvs5buv5s5b" path="res://src/scenes/lane_item/lane_item.tscn" id="2_cednl"]
[ext_resource type="PackedScene" uid="uid://dsgxdyel8yp2c" path="res://src/scenes/tree_scenery/tree_scenery.tscn" id="3_gd880"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p8dot"]
albedo_color = Color(0.894118, 0.101961, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_1skcj"]
material = SubResource("StandardMaterial3D_p8dot")

[node name="CourseSpawner" type="Node3D"]
script = ExtResource("1_r4bbu")
_lane_item_scene = ExtResource("2_cednl")
_tree_scene = ExtResource("3_gd880")
_starting_spawn_interval = 1.0
_min_spawn_interval = 0.5
_spawn_interval_reduction = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_1skcj")

[node name="Timers" type="Node" parent="."]

[node name="ScenerySpawnTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.2
autostart = true

[node name="SpawnTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="SpawnLanes" type="Node3D" parent="."]

[node name="SpawnLaneLeft" type="Marker3D" parent="SpawnLanes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
gizmo_extents = 1.0

[node name="SpawnLaneCenter" type="Marker3D" parent="SpawnLanes"]
unique_name_in_owner = true
gizmo_extents = 1.0

[node name="SpawnLaneRight" type="Marker3D" parent="SpawnLanes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
gizmo_extents = 1.0

[node name="SceneryLaneLeft" type="Marker3D" parent="SpawnLanes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)

[node name="SceneryLaneRight" type="Marker3D" parent="SpawnLanes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)

[node name="SceneryItems" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="LaneItems" type="Node3D" parent="."]
unique_name_in_owner = true
